--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_lobogames"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_lobogames_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BoardGame">
         <activity
@@ -16,7 +16,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".CreditsActivity"
+            android:name=".AboutActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
