feat: pre board

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,13 @@
                 android:value="" />
         </activity>
         <activity
+                android:name=".PreBoardActivity"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value="" />
+        </activity>
+        <activity
             android:name=".GameActivity"
             android:exported="false" />
         <activity
