--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,13 @@
                     android:value="" />
         </activity>
         <activity
+                android:name=".ReplayActivity"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value="" />
+        </activity>
+        <activity
             android:name=".GameActivity"
             android:exported="false" />
         <activity
