--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:name="com.marcoantonioaav.lobogames.application.LoBoGames"
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_lobogames_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BoardGame">
+        android:theme="@style/Theme.BoardGame"
+        android:requestLegacyExternalStorage="true"
+    >
+
         <activity
             android:name=".HowToPlayActivity"
             android:exported="false">
