--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ModuleSelectionActivity"
+            android:name=".ModuleActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
